# mote

./: .gitignore  README.md  pyproject.toml  test.mote
mote/: ast_nodes.py  env.py  interpreter.py  lexer.py  main.py  parser.out  parser.py  parsetab.py  repl.py  stdlib.py  utils.py
