[project]
name = "mote"
version = "0.2.0"
description = "A minimal interpreted programming language (formerly Dust)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ply>=3.11",
]
authors = [
  { name = "Warith Ogunwoolu", email = "ogunwooluolasunmbo@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
mote = "mote.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"